--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Gabriel Rodrigues <gabxda203@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "lodash": "^4.17.21",
     "promise-retry": "^2.0.1",
     "request": "^2.88.2",
